--- a/CEXDirect/Error/LocationUnsupportedViewController.storyboard
+++ b/CEXDirect/Error/LocationUnsupportedViewController.storyboard
@@ -18,14 +18,14 @@
             <objects>
                 <viewController id="YXL-Hc-p2e" customClass="LocationUnsupportedViewController" customModule="CEXDirect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JAy-fn-ZW5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="489"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="474"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ljf-8F-BYF">
-                                <rect key="frame" x="0.0" y="40" width="414" height="449"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ljf-8F-BYF">
+                                <rect key="frame" x="0.0" y="40" width="414" height="434"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Not Supported" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="67P-pB-JFG">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="33"/>
+                                        <rect key="frame" x="73.5" y="0.0" width="267.5" height="33"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="33" id="5T5-Xr-cMj"/>
                                         </constraints>
@@ -33,87 +33,42 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfk-yH-v6p">
-                                        <rect key="frame" x="0.0" y="73" width="414" height="376"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rmf-f8-W9g">
-                                                <rect key="frame" x="10" y="16" width="394" height="116"/>
-                                                <string key="text">We are sorry, but we cannot process transactions from your country at this time We aim for global coverage! We will let you know when our service is available at your location</string>
-                                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="16"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxc-gg-pyu" customClass="CDTextField" customModule="CEXDirect" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="148" width="394" height="60"/>
-                                                <color key="backgroundColor" red="0.23921568630000001" green="0.30588235289999999" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="c8E-91-3cd"/>
-                                                </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                        <real key="value" value="0.0"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Email"/>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="icon" value="ic_white_mail"/>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                        <real key="value" value="2"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="keyboardType">
-                                                        <integer key="value" value="7"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E64-82-ldN" customClass="CDCheckbox" customModule="CEXDirect" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="224" width="394" height="60"/>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="YIe-Lf-fFh"/>
-                                                </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="message" value="I agree to receive notification email"/>
-                                                </userDefinedRuntimeAttributes>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ses-7P-gfN" customClass="CDButton" customModule="CEXDirect" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="300" width="394" height="60"/>
-                                                <color key="backgroundColor" red="0.047058823530000002" green="0.52941176469999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="V2H-tS-tVj"/>
-                                                </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="style" value="blue"/>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="INFORM ME!"/>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                        <real key="value" value="4"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
-                                                        <real key="value" value="20"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </view>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="location_unsupported" translatesAutoresizingMaskIntoConstraints="NO" id="fAB-33-axX">
+                                        <rect key="frame" x="112.5" y="73" width="189" height="155.5"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We are sorry, but we cannot process transactions from your country at this time. We aim for global coverage!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rmf-f8-W9g">
+                                        <rect key="frame" x="10" y="268.5" width="394" height="65.5"/>
+                                        <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="16"/>
+                                        <color key="textColor" red="0.49019607840000001" green="0.57647058819999997" blue="0.70196078429999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ses-7P-gfN" customClass="CDButton" customModule="CEXDirect" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="374" width="394" height="60"/>
+                                        <color key="backgroundColor" red="0.047058823530000002" green="0.52941176469999995" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="Qxc-gg-pyu" firstAttribute="top" secondItem="rmf-f8-W9g" secondAttribute="bottom" constant="16" id="7xP-Ts-N1T"/>
-                                            <constraint firstItem="rmf-f8-W9g" firstAttribute="top" secondItem="cfk-yH-v6p" secondAttribute="top" constant="16" id="DBV-th-oky"/>
-                                            <constraint firstAttribute="trailing" secondItem="rmf-f8-W9g" secondAttribute="trailing" constant="10" id="US4-LP-yuB"/>
-                                            <constraint firstItem="Ses-7P-gfN" firstAttribute="leading" secondItem="cfk-yH-v6p" secondAttribute="leading" constant="10" id="W1C-rZ-Ted"/>
-                                            <constraint firstAttribute="bottom" secondItem="Ses-7P-gfN" secondAttribute="bottom" constant="16" id="XYQ-ty-oOJ"/>
-                                            <constraint firstItem="E64-82-ldN" firstAttribute="leading" secondItem="cfk-yH-v6p" secondAttribute="leading" constant="10" id="aCQ-3a-6u4"/>
-                                            <constraint firstItem="Qxc-gg-pyu" firstAttribute="leading" secondItem="cfk-yH-v6p" secondAttribute="leading" constant="10" id="hvt-Xf-FqT"/>
-                                            <constraint firstItem="rmf-f8-W9g" firstAttribute="leading" secondItem="cfk-yH-v6p" secondAttribute="leading" constant="10" id="lB6-8s-9F7"/>
-                                            <constraint firstAttribute="trailing" secondItem="E64-82-ldN" secondAttribute="trailing" constant="10" id="nOR-kQ-8Rw"/>
-                                            <constraint firstAttribute="trailing" secondItem="Qxc-gg-pyu" secondAttribute="trailing" constant="10" id="sif-N0-hra"/>
-                                            <constraint firstItem="Ses-7P-gfN" firstAttribute="top" secondItem="E64-82-ldN" secondAttribute="bottom" constant="16" id="x5A-lh-wx4"/>
-                                            <constraint firstItem="E64-82-ldN" firstAttribute="top" secondItem="Qxc-gg-pyu" secondAttribute="bottom" constant="16" id="xaY-Gz-FbE"/>
-                                            <constraint firstAttribute="trailing" secondItem="Ses-7P-gfN" secondAttribute="trailing" constant="10" id="zn1-aw-4AO"/>
+                                            <constraint firstAttribute="height" constant="60" id="73s-eQ-e7U"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="style" value="blue"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="title" value="BACK"/>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="4"/>
                                             </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                                                <real key="value" value="20"/>
+                                            </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="back:" destination="YXL-Hc-p2e" eventType="touchUpInside" id="O2e-Kq-BIV"/>
+                                        </connections>
                                     </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Ses-7P-gfN" firstAttribute="leading" secondItem="ljf-8F-BYF" secondAttribute="leading" constant="10" id="L2A-0v-zTg"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ses-7P-gfN" secondAttribute="trailing" constant="10" id="O38-Wf-qvE"/>
+                                    <constraint firstAttribute="trailing" secondItem="rmf-f8-W9g" secondAttribute="trailing" constant="10" id="Utq-OP-KfJ"/>
+                                    <constraint firstItem="rmf-f8-W9g" firstAttribute="leading" secondItem="ljf-8F-BYF" secondAttribute="leading" constant="10" id="bfd-Ip-pfw"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.050980392159999999" green="0.066666666669999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -125,16 +80,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LYK-Gi-Ekd"/>
                     </view>
-                    <size key="freeformSize" width="414" height="489"/>
-                    <connections>
-                        <outlet property="agreeCheckbox" destination="E64-82-ldN" id="7SF-QV-tnJ"/>
-                        <outlet property="emailTextField" destination="Qxc-gg-pyu" id="KkE-Y8-dGP"/>
-                        <outlet property="informMeButton" destination="Ses-7P-gfN" id="6Cm-n5-goB"/>
-                    </connections>
+                    <size key="freeformSize" width="414" height="474"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MQu-jS-Dgp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-17" y="185"/>
+            <point key="canvasLocation" x="-17.39130434782609" y="184.48660714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="location_unsupported" width="189" height="137.5"/>
+    </resources>
 </document>
