--- a/CEXDirect/UIKit/CDCheckbox.xib
+++ b/CEXDirect/UIKit/CDCheckbox.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,20 +23,20 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="sHp-tL-LtX">
-            <rect key="frame" x="0.0" y="0.0" width="110" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="110" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4H-P1-xdp">
-                    <rect key="frame" x="0.0" y="0.0" width="110" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="110" height="60"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="Aes-FM-VWo">
-                            <rect key="frame" x="0.0" y="6" width="110" height="28"/>
+                            <rect key="frame" x="0.0" y="6" width="110" height="48"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xxr-2O-Xfd">
-                                    <rect key="frame" x="0.0" y="0.0" width="43" height="28"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="43" height="48"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KRH-XY-r3E">
-                                            <rect key="frame" x="13" y="-1" width="30" height="30"/>
+                                            <rect key="frame" x="13" y="9" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="CqZ-Xj-as7"/>
                                                 <constraint firstAttribute="width" constant="30" id="ROC-8o-jld"/>
@@ -56,7 +56,7 @@
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOS" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbZ-tl-Kbm" customClass="NantesLabel" customModule="Nantes">
-                                    <rect key="frame" x="50" y="0.0" width="60" height="28"/>
+                                    <rect key="frame" x="50" y="0.0" width="60" height="48"/>
                                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="16"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -74,6 +74,7 @@
                         <constraint firstAttribute="bottom" secondItem="Aes-FM-VWo" secondAttribute="bottom" constant="6" id="KZl-Zo-UlZ"/>
                         <constraint firstItem="Aes-FM-VWo" firstAttribute="top" secondItem="y4H-P1-xdp" secondAttribute="top" constant="6" id="LeC-RH-A1c"/>
                         <constraint firstItem="Aes-FM-VWo" firstAttribute="leading" secondItem="y4H-P1-xdp" secondAttribute="leading" id="N15-Mw-fbj"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="dIp-Vo-P3X"/>
                         <constraint firstAttribute="trailing" secondItem="Aes-FM-VWo" secondAttribute="trailing" id="hSU-lL-Ert"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -86,7 +87,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgS-qh-KUM">
-                    <rect key="frame" x="0.0" y="40" width="110" height="20"/>
+                    <rect key="frame" x="0.0" y="60" width="110" height="20"/>
                     <color key="backgroundColor" red="0.050980392159999999" green="0.066666666669999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="EqT-bq-wgO"/>
