--- a/CEXDirect/UIKit/CDLoadingView.xib
+++ b/CEXDirect/UIKit/CDLoadingView.xib
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CDLoadingView" customModule="CEXDirect" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CDLoadingView" customModule="CEXDirect" customModuleProvider="target">
+            <connections>
+                <outlet property="progressView" destination="ZIj-kU-p4W" id="Hyb-gW-cXz"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="icz-0m-nPE">
             <rect key="frame" x="0.0" y="0.0" width="414" height="338"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ltG-yj-eAa">
-                    <rect key="frame" x="157" y="124" width="100" height="100"/>
+                    <rect key="frame" x="157" y="141" width="100" height="100"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZIj-kU-p4W" customClass="CDProgressView" customModule="CEXDirect" customModuleProvider="target">
+                            <rect key="frame" x="18" y="18" width="64" height="64"/>
+                            <color key="backgroundColor" red="0.14901960784313725" green="0.21568627450980393" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="64" id="RbB-rf-veQ"/>
+                                <constraint firstAttribute="height" constant="64" id="uj8-kz-5PX"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" red="0.14901960780000001" green="0.2156862745" blue="0.30196078430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="ZIj-kU-p4W" firstAttribute="centerY" secondItem="ltG-yj-eAa" secondAttribute="centerY" id="5eN-g3-nil"/>
+                        <constraint firstItem="ZIj-kU-p4W" firstAttribute="centerX" secondItem="ltG-yj-eAa" secondAttribute="centerX" id="X7F-oA-7AV"/>
                         <constraint firstAttribute="width" constant="100" id="nbG-JO-jeS"/>
                         <constraint firstAttribute="height" constant="100" id="oc3-p5-Rnw"/>
                     </constraints>
@@ -29,14 +43,9 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="olA-7A-fJx">
-                    <rect key="frame" x="188.5" y="155.5" width="37" height="37"/>
-                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="olA-7A-fJx" firstAttribute="centerY" secondItem="ltG-yj-eAa" secondAttribute="centerY" id="1Ir-bB-VeC"/>
-                <constraint firstItem="olA-7A-fJx" firstAttribute="centerX" secondItem="ltG-yj-eAa" secondAttribute="centerX" id="DSF-Iy-pFv"/>
                 <constraint firstItem="ltG-yj-eAa" firstAttribute="centerY" secondItem="260-XY-Yzu" secondAttribute="centerY" id="hRW-dj-a67"/>
                 <constraint firstItem="ltG-yj-eAa" firstAttribute="centerX" secondItem="260-XY-Yzu" secondAttribute="centerX" id="npp-Qr-m4h"/>
             </constraints>
